fix(octra): project list not scrollable on small displays

--- a/apps/octra/src/app/core/pages/intern/projects-list/projects-list.component.scss
+++ b/apps/octra/src/app/core/pages/intern/projects-list/projects-list.component.scss
@@ -3,22 +3,14 @@
   flex: auto;
   flex-direction: column;
   background-color: whitesmoke;
+  overflow-y: auto;
 }
 
 .container {
   margin-top: 40px;
-  height: 300px;
   display: flex;
   flex: auto;
   flex-direction: column;
-}
-
-.table-wrapper {
-  display: flex;
-  flex: auto;
-  flex-direction: column;
-  overflow-y: auto;
-  height: 100%;
 }
 
 table tbody tr td {
